[HOTFIX] fix : 이야기 아이템 추가 로직변경